:lipstick: fixed some alignments

--- a/style.css
+++ b/style.css
@@ -160,8 +160,6 @@ a{
 .stock-plus{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
     gap: 30px;
 
 }
